force-app/main/default/objects/Case/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>