force-app/main/default/objects/Case/fields/Requester_ID__c.field-meta.xml
<CustomField>
    <fullName>Requester_ID__c</fullName>
    <formula>Requester__r.SYSFullID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester ID</label>
    <type>Text</type>
</CustomField>