force-app/main/default/objects/Case/fields/Requester_s_Department__c.field-meta.xml
<CustomField>
    <fullName>Requester_s_Department__c</fullName>
    <formula>Requester__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester&apos;s Department</label>
    <type>Text</type>
</CustomField>