force-app/main/default/objects/Case/fields/Resolution_Details__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Details__c</fullName>
    <label>Resolution Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>