force-app/main/default/objects/Case/fields/Security_Kit_Shared__c.field-meta.xml
<CustomField>
    <fullName>Security_Kit_Shared__c</fullName>
    <label>Security Kit Shared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>