force-app/main/default/objects/Case/fields/SFDC_direct_manager_field_updated__c.field-meta.xml
<CustomField>
    <fullName>SFDC_direct_manager_field_updated__c</fullName>
    <inlineHelpText>manager + old/new teams</inlineHelpText>
    <label>SFDC direct manager field updated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SFDC fields updated</fullName>
            </value>
            <value>
                <fullName>No need on this user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>