force-app/main/default/objects/Case/fields/SFDC_user_created_deactivated_updated__c.field-meta.xml
<CustomField>
    <fullName>SFDC_user_created_deactivated_updated__c</fullName>
    <label>SFDC user created/deactivated/updated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creation - IT asked for email address</fullName>
            </value>
            <value>
                <fullName>Creation - SFDC request sent to MIS</fullName>
            </value>
            <value>
                <fullName>Update - Ticket opened to MIS</fullName>
            </value>
            <value>
                <fullName>Deactivation - OFB automation worked</fullName>
            </value>
            <value>
                <fullName>Deactivation -  SFDC request sent to MIS</fullName>
            </value>
            <value>
                <fullName>User Change Completed</fullName>
            </value>
            <value>
                <fullName>No need for this user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>