force-app/main/default/objects/Case/fields/Similarweb_Security_Kit__c.field-meta.xml
<CustomField>
    <fullName>Similarweb_Security_Kit__c</fullName>
    <defaultValue>&quot;https://www.panoraysapp.com/security_kit/RVVVOVlGZCtlemMydGp1SEd4aVp5bFdnRVhYTHRya2dXQUtwUDBiUWJrcjFMMnR4OU92czhjeWplOTVmQkZMQmxaSW1RM0hmY2ZXMWhIVnQwZkN2Smc9PQ/view&quot;</defaultValue>
    <inlineHelpText>Public SMWB docs you can share with your Customer (e.g. SOC 3)</inlineHelpText>
    <label>Similarweb Security Kit</label>
    <type>Url</type>
</CustomField>