force-app/main/default/objects/Case/fields/Skip_Approval__c.field-meta.xml
<CustomField>
    <fullName>Skip_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Help filed tp skip irrelevant approval steps</description>
    <label>Skip Approval</label>
    <type>Checkbox</type>
</CustomField>