force-app/main/default/objects/Case/fields/SM_AM_Direct_Manager__c.field-meta.xml
<CustomField>
    <fullName>SM_AM_Direct_Manager__c</fullName>
    <formula>Requester__r.Manager.FirstName  + &apos; &apos;+ Requester__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SM/AM Direct Manager</label>
    <type>Text</type>
</CustomField>