force-app/main/default/objects/Case/fields/Temporary_Extended_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Extended_End_Date__c</fullName>
    <inlineHelpText>Please fill in this field only if Type of Extesion = &quot;Temporary Extension OR Trial Extension&quot;</inlineHelpText>
    <label>Temporary Extended End Date</label>
    <type>Date</type>
</CustomField>