force-app/main/default/objects/Case/fields/Tools_granted_deactivated__c.field-meta.xml
<CustomField>
    <fullName>Tools_granted_deactivated__c</fullName>
    <label>Tools granted/deactivated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Tools granted + checkbox</fullName>
            </value>
            <value>
                <fullName>Tools deactivated + checkbox</fullName>
            </value>
            <value>
                <fullName>Tools aligned with new role</fullName>
            </value>
            <value>
                <fullName>No tools on this user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>