force-app/main/default/objects/Case/fields/typeform__Typeform_Form_Mapping__c.field-meta.xml
<CustomField>
    <fullName>typeform__Typeform_Form_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Typeform Form Mapping</label>
    <referenceTo>typeform__Form_Mapping__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>