force-app/main/default/objects/Case/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <formula>IF(
    ISBLANK(ParentId),
    IF(
        CONTAINS(Requester__r.Email, &quot;@similarweb.com&quot;),
        &quot;Internal&quot;,
        &quot;External&quot;
    ),
    IF(
        CONTAINS(Original_Requester__r.Email, &quot;@similarweb.com&quot;),
        &quot;Internal&quot;,
        &quot;External&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Type</label>
    <type>Text</type>
</CustomField>