force-app/main/default/objects/Case/fields/What_are_the_deliverables__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_deliverables__c</fullName>
    <label>What are the deliverables?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>