force-app/main/default/objects/Case/recordTypes/Deal_Desk.recordType-meta.xml
<RecordType>
    <fullName>Deal_Desk</fullName>
    <active>true</active>
    <businessProcess>Deal Desk</businessProcess>
    <label>Deal Desk</label>
</RecordType>