force-app/main/default/objects/Case/recordTypes/Legal.recordType-meta.xml
<RecordType>
    <fullName>Legal</fullName>
    <active>true</active>
    <businessProcess>Legal</businessProcess>
    <label>Legal</label>
</RecordType>