force-app/main/default/objects/Case/recordTypes/MIS_Support.recordType-meta.xml
<RecordType>
    <fullName>MIS_Support</fullName>
    <active>true</active>
    <businessProcess>MIS GTM</businessProcess>
    <label>MIS Support</label>
</RecordType>