force-app/main/default/objects/Case/recordTypes/SalesOps.recordType-meta.xml
<RecordType>
    <fullName>SalesOps</fullName>
    <active>true</active>
    <businessProcess>SalesOps</businessProcess>
    <label>SalesOps</label>
</RecordType>