force-app/main/default/objects/Case/validationRules/Billing_Processing_Instructions_Opps.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Processing_Instructions_Opps</fullName>
    <active>true</active>
    <description>Billing Processing Instructions must have opportunity for a flow to update the opp .
Case - RT - After Save</description>
    <errorConditionFormula>AND (
ISBLANK( Opportunity__c ) , 
NOT(ISBLANK( Billing_Processing_Instructions__c ))
)</errorConditionFormula>
    <errorDisplayField>Billing_Processing_Instructions__c</errorDisplayField>
    <errorMessage>Please fill a related opportunity record , before adding Billing Processing Instructions</errorMessage>
</ValidationRule>