force-app/main/default/objects/Case/validationRules/Change_Case_Owner_by_MIS_Team_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Case_Owner_by_MIS_Team_only</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
 RecordType.Name = &quot;MIS Support&quot;</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Only System Administrator can change the case owner</errorMessage>
</ValidationRule>