force-app/main/default/objects/Case/validationRules/Close_Case_mandatory_field_DealDesk_Lega.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Case_mandatory_field_DealDesk_Lega</fullName>
    <active>true</active>
    <description>Required fields when closing the ticket for Deal Desk and Legal</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Status, &apos;Completed&apos;), 
				    (TEXT(Case_Resolution__c))&lt;&gt;&quot;Requester Didn&apos;t Respond&quot;,
OR(
    RecordType.Name = &apos;Deal Desk&apos;,RecordType.Name = &apos;Legal&apos;),
    
    OR(
        AND(
            NOT(ISPICKVAL(Type, &quot;Contract Signed Manually - Quote for Deal Desk Review&quot;)),
            NOT(ISPICKVAL(Type, &quot;Similarweb MSA&quot;)),
            NOT(ISPICKVAL(Type, &quot;DDQ (Due Diligence / Security Questionnaire)&quot;)),
            NOT(ISPICKVAL(Type, &quot;Customer Access&quot;)),
            NOT(ISPICKVAL(Type, &quot;Customer Invoice(s)/Collections&quot;)),
            NOT(ISPICKVAL(Type, &quot;Customer Vendor Form&quot;)),      
												 NOT(ISPICKVAL(Type, &quot;RFP/RFI (Request for Proprosal)&quot;)),
            NOT(ISPICKVAL(Type, &quot;Opp Review: One-Time Product&quot;)),
            NOT(ISPICKVAL(Type, &quot;Company Documents (e.g. SOC 2, SOC 3, COI, Bank Letter)&quot;)),
            NOT(ISPICKVAL(Type, &quot;Third Party Access Agreement (TPAA)&quot;)),
												
            OR(
                TEXT(Type) = &apos;&apos;,
                TEXT(Case_Sub_Type__c) = &apos;&apos;
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>Before closing the case please fill out Case Type and Sub Type</errorMessage>
</ValidationRule>