force-app/main/default/objects/Case/validationRules/Close_Case_mandatory_fields_Saeslops.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Case_mandatory_fields_Saeslops</fullName>
    <active>true</active>
    <description>Required fields when closing the ticket for salesops</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(Status, &apos;Completed&apos;),
    RecordType.Name = &apos;SalesOps&apos;,
    OR(
        TEXT(Type) = &apos;&apos;,
        TEXT(Case_Sub_Type__c) = &apos;&apos;,
        TEXT(Case_Resolution__c) = &apos;&apos;
    )
)</errorConditionFormula>
    <errorMessage>Before closing the case please fill out Case Type, Sub Type and Resolution</errorMessage>
</ValidationRule>