force-app/main/default/objects/Case/validationRules/Close_Case_sub_type_SalesOps.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Case_sub_type_SalesOps</fullName>
    <active>true</active>
    <description>validation on sub type value</description>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp;
ISPICKVAL(Status,&apos;Closed&apos;) &amp;&amp;
RecordType.Name = &apos;SalesOps&apos; &amp;&amp;
(
TEXT(Case_Sub_Type__c)=&apos;General Question&apos;
)</errorConditionFormula>
    <errorMessage>Case Sub Type cannot be &apos;General Question&apos;</errorMessage>
</ValidationRule>