force-app/main/default/objects/Case/validationRules/Only_Requester_Can_Modify_Child_Desc.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Requester_Can_Modify_Child_Desc</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISCHANGED( Child_Case_Description__c ),
$User.Id &lt;&gt;  Requester__c  )</errorConditionFormula>
    <errorDisplayField>Child_Case_Description__c</errorDisplayField>
    <errorMessage>Only the requester can modify the child case description</errorMessage>
</ValidationRule>