force-app/main/default/objects/Case/listViews/All_Open_Deal_Desk_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Deal_Desk_Cases</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Requester__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Due_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Deal_Desk</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>All Open Deal Desk Cases</label>
    <sharedTo>
        <group>Service_Deal_Desk</group>
        <group>Service_Edit_Deal_Desk</group>
        <group>Service_View_Deal_Desk</group>
    </sharedTo>
</ListView>