force-app/main/default/objects/Case/listViews/BI_Tickets.listView-meta.xml
<ListView>
    <fullName>BI_Tickets</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Billing</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>BI Ticket</value>
    </filters>
    <label>Billing - BI Tickets (NEW)</label>
    <sharedTo>
        <group>Billing_Finance</group>
    </sharedTo>
</ListView>