force-app/main/default/objects/Case/listViews/Billing_APAC_New1.listView-meta.xml
<ListView>
    <fullName>Billing_APAC_New1</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Billing</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>hello@healthletic.io</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>support@interioricons.com</value>
    </filters>
    <filters>
        <field>Group__c</field>
        <operation>equals</operation>
        <value>Billing APAC</value>
    </filters>
    <label>⭐️ Billing - APAC - New</label>
    <queue>Billing_Cases</queue>
</ListView>