force-app/main/default/objects/Case/listViews/Billing_Cases_Approval_Case.listView-meta.xml
<ListView>
    <fullName>Billing_Cases_Approval_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing Cases Approval</label>
    <queue>Billing_Cases_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>