force-app/main/default/objects/Case/listViews/Billing_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Billing_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing Cases</label>
    <queue>Billing_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>