force-app/main/default/objects/Case/listViews/Billing_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>Billing_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Requester__c</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Billing</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <label>Billing - Closed Cases</label>
    <sharedTo>
        <group>Service_Billing</group>
    </sharedTo>
</ListView>