force-app/main/default/objects/Case/listViews/Billing_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Billing_Open_Cases</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>Original_Requester__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>Group__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Internal_Case_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Billing</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>New,Merged,Cancelled,Closed,Completed</value>
    </filters>
    <label>Billing - Open Cases</label>
    <sharedTo>
        <group>Service_Billing</group>
    </sharedTo>
</ListView>