force-app/main/default/objects/Case/listViews/Cases_Pending_Billing.listView-meta.xml
<ListView>
    <fullName>Cases_Pending_Billing</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Requester__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Due_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Pending Billing</value>
    </filters>
    <label>Cases Pending Billing</label>
    <sharedTo>
        <group>Admins_Group</group>
    </sharedTo>
</ListView>